testsuite/poke.pkl/eq-arrays-diag-2.pk
/* { dg-do compile } */

type Foo = struct { byte a; byte b; };

var e
  = ([Foo {}] == [Foo {}, Foo {a=10UB}]); /* { dg-error "invalid.*\n.*expected Foo.*got Foo.*" } */
